--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "morethan-log",
+  "name": "journewn-log",
   "version": "1.3.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/morethanmin/morethan-log.git"
+    "url": "https://github.com/c-jeongyyun/journewn-log"
   },
   "scripts": {
     "dev": "next dev",
